@@ -2,11 +2,12 @@ package state;
 
 import core.GamePanel;
 import network.MinigameManager;
+import ui.StoryDialog; // เพิ่ม import เพื่อเรียกใช้บทพูดได้โดยตรง
 
 import java.awt.*;
 import java.util.ArrayList;
 
-public class Day2State extends AbstractState{
+public class Day2State extends AbstractState {
     public GamePanel gamePanel;
     public MinigameManager minigameManager;
 
@@ -16,17 +17,26 @@ public class Day2State extends AbstractState{
     private boolean banIpLogTriggeredAtFive = false;
 
     private boolean startedDialogue = false;
+    // จัดการ CG คั่นก่อนจบวัน
+    private boolean isPlayingEndCG = false;
+    private boolean endCgTriggered = false;
 
     public Day2State(GamePanel gamePanel) {
         //ไว้จัดฉาก เตรียมสิ่งต่าง ๆ เช่นโหลดภาพ CG เริ่มวัน หรือเอา NPC มาวางรอไว้
         this.gamePanel = gamePanel;
         minigameManager = gamePanel.getMinigameManager();
 
+        gamePanel.getSound().setVolume("bg1", 0.5f);
+        gamePanel.getSound().loopSound("bg1");
+
+        // วาร์ปกลับไป lift ชั้น 1
+        gamePanel.getRoomManager().setRoom(gamePanel.getRoomManager().mapDataFloor1, 0);
+        // เซตตำแหน่งตัวละครให้กลับมาที่ลิฟต์
+        gamePanel.getPlayer().xDelta = 100;
+        gamePanel.getPlayer().checkRight = true;
+
         setupNPC();
         setSpecialTask();
-
-        gamePanel.getPlayer().xDelta=100;
-        gamePanel.getPlayer().checkRight=true;
 
         //task ในวันนี้
         taskList.add("lan");
@@ -36,15 +46,34 @@ public class Day2State extends AbstractState{
 
 
         minigameManager.resetTask();
+
+        // มั่นใจว่าเริ่มวันมาต้องไม่ค้างหน้าจอ CG
+        gamePanel.showingEnding = false;
+        gamePanel.timeManager.setPaused(false);
     }
 
     @Override
     public void update() {
+        // บังคับจบวัน CG ห้องนอน
+        if (gamePanel.showingEnding) {
+            if (gamePanel.gameEnding.isFinished()) {
+                if (isPlayingEndCG) {
+                    gamePanel.getSound().stopSound("bg_dayEnd");
+                    gamePanel.showingEnding = false;
+                    isPlayingEndCG = false;
+                    gamePanel.timeManager.forceEndDay();
+                } else {
+                    gamePanel.showingEnding = false;
+                    gamePanel.timeManager.setPaused(false);
+                }
+            }
+            return;
+        }
 
         if (!startedDialogue) {
             //sound phone ring ++++++++++++++++++++++++++++++++++++++++++++++++
             startedDialogue = true;
-            gamePanel.dialogBox.startDialog(ui.StoryDialog.DAY2_LIFT1);
+            gamePanel.dialogBox.startDialog(StoryDialog.DAY2_LIFT1);
         }
 
         //เขียนเงื่อนไขดักเหตุการณ์ประจำวัน เช่น "ถ้าเวลาในเกมเดินถึงตี 2 ให้ทริกเกอร์ไฟดับ"
@@ -59,19 +88,32 @@ public class Day2State extends AbstractState{
 
 
         if (h != lastH) {
-
-            if((h+1)%1.5 == 0  && !taskList.isEmpty()){
+            if ((h + 1) % 1.5 == 0 && !taskList.isEmpty()) {
                 //settask ทีละเกมแล้วลบออก
-                minigameManager.setTask(taskList.getFirst());
-                taskList.remove(taskList.getFirst());
+                minigameManager.setTask(taskList.get(0));
+                taskList.remove(0);
 
                 lastH = h;
                 System.out.println(taskList.size());
             }
-
-
         }
 
+        // ดักเวลาก่อน 6 โมงเช้า
+        if (h >= 5.9 && !endCgTriggered) {
+            endCgTriggered = true;
+            isPlayingEndCG = true;
+
+            gamePanel.getSound().stopSound("bg1");
+            gamePanel.getSound().setVolume("bg_dayEnd", 0.5f);
+            gamePanel.getSound().loopSound("bg_dayEnd");
+
+            gamePanel.timeManager.setPaused(true); // หยุดเวลาก่อน
+            gamePanel.showingEnding = true;        // เข้าโหมดโชว์ CG
+
+            // เรียกใช้รูปห้องนอน
+            gamePanel.gameEnding.startEnding("CG3-BedRoom", StoryDialog.DAY2_BEDROOM);
+            return;
+        }
     }
 
     @Override
@@ -79,16 +121,16 @@ public class Day2State extends AbstractState{
         //เอาไว้ วาดภาพหรือใส่ UI พิเศษ ที่มีเฉพาะวันนั้น
     }
 
-    public void setupNPC(){
+    public void setupNPC() {
         gamePanel.getNpcmanager().showAllNPCs();
 
-        gamePanel.getNpcmanager().janitor.setLocation("meeting",2100);
-        gamePanel.getNpcmanager().hr.setLocation("office",1100);
-        gamePanel.getNpcmanager().boss.setLocation(null,1000);
-        gamePanel.getNpcmanager().itsupport.setLocation("itsupport",2500);
+        gamePanel.getNpcmanager().janitor.setLocation("meeting", 2100);
+        gamePanel.getNpcmanager().hr.setLocation("office", 1100);
+        gamePanel.getNpcmanager().boss.setLocation(null, 1000);
+        gamePanel.getNpcmanager().itsupport.setLocation("itsupport", 2500);
     }
 
-    public void setSpecialTask(){
+    public void setSpecialTask() {
         gamePanel.getMinigameManager().taskBoss = true;
         gamePanel.getMinigameManager().taskJanitor = true;
     }
